--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inflomedia | Advanced Digital Marketing Agency</title>
+    <title>Inflo Media – Where Ideas Flow & Brands Grow.</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <style>
@@ -508,16 +508,16 @@
             <div class="section-content">
                  <div class="grid md:grid-cols-2 gap-8 items-center">
                     <div class="gsap-reveal bg-white/50 p-6 rounded-lg hover:shadow-xl transition-shadow text-center">
-                        <img src="https://thegurumedia.in/img/CEO.jpg" alt="Vishnu, CEO/Founder" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-md object-cover" onerror="this.onerror=null;this.src='https://placehold.co/128x128/cccccc/ffffff?text=V';">
-                        <h3 class="text-2xl font-bold">HAY! I'M VISHNU</h3>
+                        <img src="https://theinflomedia.in/IMG_6171.JPG" alt="Vishnu, CEO/Founder" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-md object-cover" onerror="this.onerror=null;this.src='https://placehold.co/128x128/cccccc/ffffff?text=V';">
+                        <h3 class="text-2xl font-bold">HAY! I'M  Kamal Kumar</h3>
                         <p class="text-blue-500 font-semibold mt-1">CEO/Founder & INFLUENCER</p>
-                        <p class="mt-4 text-gray-700 text-left">At Inflomedia, we focus on building creative solutions not just for brands but also for creators. With my personal experience as a content creator, I understand what it takes to stand out in the digital world.</p>
+                        <p class="mt-4 text-gray-700 text-left">At Inflo Media, we specialize in crafting innovative solutions that empower both brands and creators. With my personal journey as a content creator, I truly understand the challenges of standing out in today’s digital landscape. That’s why our mission is to help you grow, connect, and create an impact that lasts.</p>
                     </div>
                     <div class="gsap-reveal bg-white/50 p-6 rounded-lg hover:shadow-xl transition-shadow text-center">
-                         <img src="https://thegurumedia.in/img/Ayush%20co%20founder.PNG" alt="Ayush, Co-Founder" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-md object-cover" onerror="this.onerror=null;this.src='https://placehold.co/128x128/cccccc/ffffff?text=A';">
+                         <img src="https://theinflomedia.in/IMG_6170.JPG" alt="Ayush, Co-Founder" class="w-32 h-32 rounded-full mx-auto mb-4 border-4 border-white shadow-md object-cover" onerror="this.onerror=null;this.src='https://placehold.co/128x128/cccccc/ffffff?text=A';">
                         <h3 class="text-2xl font-bold">HAY! I'M AYUSH</h3>
                         <p class="text-blue-500 font-semibold mt-1">Co-Founder & Marketing Executive</p>
-                        <p class="mt-4 text-gray-700 text-left">At Inflomedia, I’m responsible for driving brand visibility, building strategic partnerships, and executing impactful marketing campaigns. I work closely with creators, brands, and our internal team to ensure every campaign delivers results.</p>
+                        <p class="mt-4 text-gray-700 text-left">At Inflo Media, I lead our efforts in brand growth, strategic collaborations, and impactful marketing campaigns. My role is all about creating meaningful connections between creators, brands, and audiences. By working closely with our partners and internal team, I ensure every campaign is not just executed—but delivers real, measurable results.</p>
                     </div>
                 </div>
             </div>
@@ -554,7 +554,7 @@
                 <div class="gsap-reveal my-6 text-gray-700">
                     <p>51/7 Padam Nagar Sarai Rohilla, Old Rohtak road, Near SBI Branch, North Delhi, Delhi,110007</p>
                     <p>info@Inflomedia.com</p>
-                    <p>+91 7668991470</p>
+                    <p>+91 8088471910</p>
                 </div>
                 <h3 class="gsap-reveal text-2xl font-bold text-gray-900">Get in Touch</h3>
                 <p class="gsap-reveal mb-6 text-gray-700">Feel free to drop us a line below!</p>
@@ -1103,7 +1103,7 @@
                 const message = document.getElementById('message').value;
 
                 // WhatsApp number (remove any non-digit characters)
-                const whatsappNumber = "917668991470";
+                const whatsappNumber = "918088471910";
 
                 // Construct the message
                 const whatsappMessage = `Hello Inflomedia,\n\nI'm contacting you from your website.\n\n*Name:* ${name}\n*Email:* ${email}\n\n*Message:*\n${message}`;
